<?xml version="1.0" encoding="utf-8"?>
<!--Generated by crowdin.com-->
<!--suppress XmlUnusedNamespaceDeclaration -->
<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <string name="extender_app_name" translatable="false">PhoneProfilesPlusExtender</string>
    <string name="extender_title_activity_pppe" translatable="false">PPPE</string>
    <string name="extender_accessibility_service_name" translatable="false">PhoneProfilesPlusExtender</string>
    <string name="extender_accessibility_service_description">Extender for PhoneProfilesPlus. It working only in conjunction with PhoneProfilesPlus.</string>
    <string name="extender_about_application_version">Version:</string>
    <string name="extender_accessibility_service_profile_force_stop_applications">Accessibility service for profile parameter \"Force stop applications\"</string>
    <string name="extender_accessibility_service_event_sensor_applications_orientation">Accessibility service for event parameters \"Application sensor\" and \"Orientation sensor\"</string>
    <string name="extender_accessibility_service_enabled">Enabled</string>
    <string name="extender_accessibility_service_disabled">Disabled</string>
    <string name="extender_accessibility_service_button">Enable/Disable Accessibility service</string>
    <string name="extender_setting_screen_not_found_alert">Setting screen not found.</string>
    <string name="extender_accessibility_service_permission">PhoneProfilesPlusExtender accessibility service</string>
    <string name="extender_accessibility_service_event_sensor_sms_mms">Accessibility service for event parameter \"SMS/MMS sensor\". Accessibility function is not used, service is needed for receiving SMS and MMS.</string>
    <string name="extender_permissions_event_sensor_sms_mms">Permissions for event parameter \"SMS/MMS sensor\" - permission SMS</string>
    <string name="extender_permissions_not_granted">Not granted</string>
    <string name="extender_permissions_granted">Granted</string>
    <string name="extender_permissions_button">Grant/deny permissions</string>
    <string name="extender_accessibility_service_event_sensor_call">Accessibility service for event parameter \"Call sensor\". Accessibility function is not used, service is needed for receiving calls.</string>
    <string name="extender_permissions_event_sensor_call">Permissions for event parameter \"Call sensor\" - permission Phone</string>
    <string name="extender_permissions_event_sensor_call_28">Permissions for event parameter \"Call sensor\" - permission Phone, Call logs</string>
    <string name="extender_toast_permissions_not_granted">Permissions are not granted</string>
    <string name="extender_accessibility_service_profile_lock_device">Accessibility service for profile parameter \"Lock device\"</string>
    <string name="extender_application_releases">Releases:</string>
    <string name="extender_web_browser_chooser">View web link using</string>
    <string name="extender_acra_email_subject_text">crash report</string>
    <string name="extender_acra_email_body_text">PhoneProfilesPlusExtender was crashed. Attached is the crash report.</string>
    <string name="extender_acra_notification_title">Sorry, PhoneProfilesPlusExtender crashed</string>
    <string name="extender_acra_notification_text">Please click here, to send crash report to author. Thank you very much.</string>
    <string name="extender_notification_channel_crash_report">Crash report</string>
    <string name="extender_scroll_info">Note: Scroll down in this screen to show all parameters.</string>
    <string name="extender_battery_optimization_text">Battery optimization for PhoneProfilesPlusExtender - please add it to \"Not optimized\" group</string>
    <string name="extender_battery_optimization_optimized">Optimized</string>
    <string name="extender_battery_optimization_not_optimized">Not optimized</string>
    <string name="extender_battery_optimization_button">Open Battery optimization</string>
    <string name="extender_acra_email_body_device">Device:</string>
    <string name="extender_acra_email_body_android_version">Android version:</string>
    <string name="extender_permissions_popup_windows_in_background">Please enable \"Display pop-up windows while running in the background\". Without this enabled, \"Force stop applications\" will not be working.</string>
    <string name="extender_popup_windows_in_background_button">Open Other permissions (MIUI)</string>
    <string name="extender_notification_channel_grant_permission">Grant permission</string>
    <string name="extender_notification_channel_grant_permission_description">Shows permission which is needed grant it.</string>
    <string name="extender_notification_permission_title">Permission not granted</string>
    <string name="extender_notification_sms_mms_permission_text">Permission for event parameter \"SMS/MMS sensor\" is not granted. Click this notification to open Extender. In it use button for grant this permission.</string>
    <string name="extender_notification_call_permission_text">Permission for event parameter \"Call sensor\" is not granted. Click this notification to open Extender. In it use button for grant this permission.</string>
    <string name="extender_notifications_permission_text">Notifications permission is not granted.\n\nPlease enable notifications for PhoneProfilesPlusExtender. Without this enabled, notifications from PhoneProfilesPlusExtender will not be displayed.</string>
    <string name="extender_enable_notificaitons_button">Enable</string>
    <string name="extender_menu_choose_language">Choose language</string>
    <string name="extender_menu_choose_language_system_language">[ System ]</string>
    <string name="extender_application_translations">Translations:</string>
    <string name="extender_email_chooser">Send e-mail using</string>
    <string name="extender_accessibility_service_disabled_app_info_1">If is not possible to enable Accessibility service, maybe are not allowed restricted settings for PhoneProfilesPlusExtender.</string>
    <string name="extender_accessibility_service_disabled_app_info_2">Click \"App info\" button to allow it.</string>
    <string name="extender_accessibility_service_disabled_app_info_3">In \"App info\" screen, click menu at top and in it \"Allow restricted settings\".</string>
    <string name="extender_accessibility_service_disabled_app_info_4">\"Allow restricted settings\" is not displayed, when restricted settings are allowed.</string>
    <string name="extender_accessibility_service_disabled_app_info_5">However, if PhoneProfilesPlusExtender is installed from a downloaded apk file, \"Allow restricted settings\" may not appear at all.</string>
    <string name="extender_accessibility_service_disabled_app_info_6">Then you must uninstall it, and install it from supported store, for example Droid-ify.</string>
    <string name="extender_accessibility_service_disabled_app_info_7">Click here to open Droid-ify installation site:</string>
    <string name="extender_accessibility_service_app_info_button">App info</string>
    <string name="extender_menu_support">Support</string>
    <string name="extender_support_subject">support</string>
    <string name="extender_menu_email_to_author">E-mail to author</string>
    <string name="extender_menu_xda_developers" translatable="false">XDA-developers</string>
    <string name="extender_menu_discord" translatable="false">Discord</string>
    <string name="extender_menu_discord_server">PhoneProfilesPlus server</string>
    <string name="extender_menu_discord_invitation">Server invitation</string>
    <string name="extender_menu_twitter" translatable="false">Twitter/X</string>
    <string name="extender_menu_reddit" translatable="false">Reddit</string>
    <string name="extender_menu_bluesky" translatable="false">Bluesky</string>
    <string name="extender_notification_channel_exclamation">Exclamation</string>
    <string name="extender_menu_mastodon" translatable="false">Mastodon</string>
</resources>

